refactoring, import backup, extension-check
add:
- import backup functionality server and client side
- frontend check if extension is installed

change:
- basic refactoring
