# server/src/main/kotlin/com/espero/yaade/server/Server.kt
@@ -12,23 +12,23 @@ import io.vertx.ext.web.openapi.RouterBuilder
 import io.vertx.ext.web.sstore.LocalSessionStore
 import io.vertx.kotlin.coroutines.CoroutineVerticle
 import io.vertx.kotlin.coroutines.await
-import org.slf4j.Logger
 import org.slf4j.LoggerFactory
 
 
 class Server(private val port: Int, private val daoManager: DaoManager) : CoroutineVerticle() {
     private val log = LoggerFactory.getLogger(Server::class.java)
 
-    private val collectionRoute = CollectionRoute(daoManager)
-    private val requestRoute = RequestRoute(daoManager)
-    private val userRoute = UserRoute(daoManager)
-
     override suspend fun start() {
         try {
+            val collectionRoute = CollectionRoute(daoManager)
+            val requestRoute = RequestRoute(daoManager)
+            val userRoute = UserRoute(daoManager, vertx)
+
             val store = LocalSessionStore.create(vertx)
             val provider = LocalAuthProvider(daoManager)
             val routerBuilder = RouterBuilder.create(vertx, "openapi.yaml").await()
-            routerBuilder.bodyHandler(BodyHandler.create())
+
+            routerBuilder.bodyHandler(BodyHandler.create().setUploadsDirectory("/tmp"))
             routerBuilder.rootHandler(SessionHandler.create(store))
 
             routerBuilder.operation("health").coroutineHandler(this, ::health)
@@ -41,6 +41,8 @@ class Server(private val port: Int, private val daoManager: DaoManager) : Corout
                 .authorizedCoroutineHandler(this, userRoute::changePassword)
             routerBuilder.operation("exportBackup")
                 .authorizedCoroutineHandler(this, userRoute::exportBackup)
+            routerBuilder.operation("importBackup")
+                .authorizedCoroutineHandler(this, userRoute::importBackup)
 
             routerBuilder.operation("getAllCollections")
                 .authorizedCoroutineHandler(this, collectionRoute::getAllCollections)
@@ -62,7 +64,7 @@ class Server(private val port: Int, private val daoManager: DaoManager) : Corout
 
             router.route("/api/logout").handler(userRoute::logout)
 
-            router.route("/*").coroutineHandler(this, StaticHandler.create());
+            router.route("/*").coroutineHandler(this, StaticHandler.create())
 
             val server = vertx.createHttpServer()
                 .requestHandler(router)
